2008-04-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelist.html: Minor correction.

2008-04-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/styles.png: Updated the screenshot.

	* ../../examples/tablelist/styles_tile.tcl: Minor improvement.

2008-04-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt: Corrected a small typo.

2008-04-15  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistConfig.tcl: Improvements related to multi-line
	* scripts/tablelistUtil.tcl:   elements.

	* scripts/tclIndex: Newly generated.

2008-04-13  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelist.html:        Expanded the tabs to spaces.
	* doc/tablelistBinding.html:
	* doc/tablelistThemes.html:
	* doc/tablelistWidget.html:

2008-04-12  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:                          Bumped the version number to 4.9;
	* *.txt:                          updated the Copyright lines; new
	* scripts/*.tcl:                  -wrap column configuration option;
	* doc/tablelist.html:             new -stretchwindow cell configuration
	* doc/tablelistTile.html:         option; changed the default values of
	* doc/tablelistWidget.html:       the -activestyle and -setfocus
	* ../../examples/tablelist/*.tcl: configuration options; improved the
	  cell editing with a combobox widget (proposed by Bryan Oakley);
	  improved the setThemeDefaults command (contributed by Schelte Bron).

	* scripts/tclIndex: Newly generated.

	* doc/*.png: Updated the screenshots.

2007-12-09  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: Fixed a bug related to the optimized item
	  insertion; fixed a bug related to the -showlinenumbers column
	  configuration option.

2007-11-22  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fixed inconsistent version of tablelist_tile, was
	  missed by the 4.8 -> 4.8.1 transition.

2007-11-03  Csaba Nemethi <csaba.nemethi@t-online.de>
